// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> matches snapshot 1`] = `
<div>
  <button
    class="solid css-1xlt9f0-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
  >
    <span
      class="btn-text"
    >
      Test button
    </span>
  </button>
</div>
`;

exports[`<Button /> matches snapshot with all props 1`] = `
<div>
  <button
    class="my-class rounded solid css-1awd3g8-baseButton-baseButton-solidButton-solidButton-outlineButton-outlineButton-ghostButton-ghostButton-linkButton-linkButton-iconBeforeButton-iconBeforeButton-iconAfterButton-iconAfterButton-btnContainer-btnContainer"
    id="my-button"
  >
    <span
      class="btn-text"
    >
      Test button
    </span>
  </button>
</div>
`;
